# pocket-ic-harness

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  README.md
.github/workflows/: ci.yml  codeberg-mirror.yml
crates/pocket-ic-harness/: Cargo.toml
crates/pocket-ic-harness-macro/: Cargo.toml
crates/pocket-ic-harness-macro/src/: lib.rs
crates/pocket-ic-harness/src/: actor.rs  agent.rs  client.rs  lib.rs  pocket_ic.rs
crates/pocket-ic-harness/src/pocket_ic/: env.rs
integration-tests/pocket-ic-tests/: Cargo.toml
integration-tests/pocket-ic-tests/src/: lib.rs
integration-tests/pocket-ic-tests/tests/: integration_tests.rs
integration-tests/test-canister/: Cargo.toml
integration-tests/test-canister/src/: lib.rs
just/: code_check.just  publish.just  test.just
