[workspace]
members = [
  "crates/pocket-ic-harness",
  "crates/pocket-ic-harness-macro",
  "integration-tests/pocket-ic-tests",
  "integration-tests/test-canister",
]
resolver = "3"

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.88.0"
authors = ["Christian Visintin <christian.visintin@veeso.dev>"]
repository = "https://github.com/veeso/pocket-ic-harness"
license = "MIT"
keywords = ["ic", "pocket-ic", "testing", "canister", "internet-computer"]
categories = ["development-tools::testing", "wasm"]

[workspace.dependencies]
anyhow = "1"
candid = { version = "0.10", features = ["value"] }
flate2 = "1"
ic-agent = "0.47"
ic-cdk = "0.20"
ic-cdk-macros = "0.20"
pocket-ic = "13"
proc-macro2 = "1"
quote = "1"
reqwest = "0.13"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
syn = { version = "2", features = ["full"] }
url = "2"
