[package]
name = "test-canister"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
serde = { workspace = true }
